# make-buildathon-konecranes

./: .env.example  .gitignore  PLAN.md  README.md  test.html
backend/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: inspections.py  templates.py
backend/app/clients/: azure_openai.py
backend/app/core/: config.py  errors.py  logging.py  prompts.py
backend/app/domain/: inspection.py  report.py  transcript.py
backend/app/prompts/: report.system.md  vision.system.md
backend/app/services/: correlation.py  glossary.py  pipeline.py  report_builder.py  template_loader.py  transcription.py  vision.py  xlsx_writer.py
backend/app/storage/: base.py  local.py
backend/scripts/: smoke_all.py  smoke_azure.py  smoke_gpt.py  smoke_report.py
backend/tests/: conftest.py  test_api.py  test_correlation.py  test_glossary.py  test_smoke.py  test_storage.py  test_template_loader.py  test_xlsx_writer.py
frontend/: Image_import  Makefile  README.md  app.py  backend.py  import sys.py  inspection-report.xlsx  pyproject.toml  ~$inspection-report.xlsx
frontend/tests/: test_backend_api.py  test_metadata.py
