[project]
name = "drone-inspection-backend"
version = "0.1.0"
description = "Drone inspection auto-reporting backend (Whisper + Azure GPT → xlsx)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "openai>=1.55",
    "openpyxl>=3.1",
    "pillow>=11.0",
    "structlog>=24.4",
    "tenacity>=9.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "types-openpyxl>=3.1.0.20240918",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "ASYNC",            # async footguns
    "S",                # security (bandit)
]
ignore = [
    "S101",  # assert ok in app code (we use them sparingly)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
